# Texel-Density-Balancer-Prototype

./: README.md
Day 2 - ROI/VramGovernor - roi/: CMakeLists.txt
Day 2 - ROI/VramGovernor - roi/src/: main.cpp
Day 2 - ROI/instructions/: instructions.txt
Day 2/VramGovernor/: CMakeLists.txt
Day 2/VramGovernor/src/: main.cpp
Day 3/: instructions.txt
Day 3 - b/VramGovernor/src/: main.cpp
Day 3/VramGovernor/: CMakeLists.txt
Day 3/VramGovernor/src/: main.cpp
Day 4/VramGovernor/src/: main.cpp
Day 5/VramGovernor/: CMakeLists.txt
Day 5/VramGovernor/src/: main.cpp
Day 6/: instructions.txt
Day 6/VramGovernor/: CMakeLists.txt  OpenDevVramGovernor.bat
Day 6/VramGovernor/src/: main.cpp
Day1/: instructions.txt
Day1/VramGovernor/: CMakeLists.txt
Day1/VramGovernor/src/: main.cpp
vcpkg installation/: instructions.txt
